@@ -13,8 +13,16 @@ if (! $@) {
 }
 $MIME_TYPE = "$ENV{'HOME'}/.mime.types";
 
+$SCRIPT_NAME = $ENV{'SCRIPT_NAME'} || $0;
+$CGI = "file://$SCRIPT_NAME";
+
 if (defined($ENV{'QUERY_STRING'})) {
-	for (split('&', $ENV{'QUERY_STRING'})) {
+	$query = $ENV{'QUERY_STRING'};
+} elsif ($ENV{'REQUEST_METHOD'} eq 'POST') {
+	sysread(STDIN, $query, $ENV{'CONTENT_LENGTH'});
+}
+if (defined($query)) {
+	for (split('&', $query)) {
 		s/^([^=]*)=//;
 		$v{$1} = $_;
 	}
@@ -25,7 +33,6 @@ if (defined($ENV{'QUERY_STRING'})) {
 	if (@ARGV >= 2) {
 		$boundary = $ARGV[1];
 	}
-	$CGI = "file:///\$LIB/multipart.cgi?file=" . &html_quote($file);
 }
 
 open(F, "< $file");
@@ -48,7 +55,6 @@ if (defined($boundary)) {
 		$mbody .= "$_\n";
 	}
 }
-$CGI .= "&boundary=" . &html_quote($boundary);
 
 if (defined($v{'count'})) {
 	$count = 0;
@@ -112,6 +118,10 @@ if (defined($v{'count'})) {
 	exit;
 }
 
+$qcgi = &html_quote($CGI);
+$qfile = &html_quote($file);
+$qboundary = &html_quote($boundary);
+
 if ($mbody =~ /\S/) {
 	$_ = $mbody;
 	s/\&/\&amp;/g;
@@ -172,14 +182,20 @@ while(! $end) {
 		s/\>/\&gt;/g;
 		print "<pre>\n";
 		print $_;
+		print "\n</pre>\n";
 		if ($type =~ /name=\"?([^\"]+)\"?/ ||
 			$dispos =~ /filename=\"?([^\"]+)\"?/) {
 			$name = $1;
 		} else {
-			$name = "[Content]";
+			$name = "Content";
 		}
-		print "\n<a href=\"$CGI&count=$count\">", &html_quote($name), "</a>";
-		print "\n\n</pre>\n";
+		print "<form method=POST action=\"$qcgi\">\n";
+		print "<input type=hidden name=file value=\"$qfile\">\n";
+		print "<input type=hidden name=boundary value=\"$qboundary\">\n";
+		print "<input type=hidden name=count value=\"$count\">\n";
+		print "<input type=submit name=submit value=\"",
+			&html_quote($name), "\">\n";
+		print "</form>\n"
 	}
 	if ($plain) {
 		$body = &decode($body, $CONV); 
@@ -187,7 +203,7 @@ while(! $end) {
 		s/\&/\&amp;/g;
 		s/\</\&lt;/g;
 		s/\>/\&gt;/g;
-		print "<pre>\n";
+		print "<pre>\n\n";
 		print $_;
 		print "</pre>\n";
 	}
