@@ -1,5 +1,10 @@
 2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02931] use POST in multipart.cgi
+	* scripts/multipart/multipart.cgi.in: support POST method
+
+2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02930] Re: fixed w3mmail.cgi
 	* scripts/w3mmail.cgi.in (lang_header_default): [=_?] should be encoded
 	* scripts/w3mmail.cgi.in (lang_body_default): '=' should be encoded
